feat: app installations
