# src/main/java/api/jcloudify/app/repository/jpa/AppInstallationRepository.java
@@ -1,0 +1,9 @@
+package api.jcloudify.app.repository.jpa;
+
+import api.jcloudify.app.repository.model.AppInstallation;
+import java.util.List;
+import org.springframework.data.jpa.repository.JpaRepository;
+
+public interface AppInstallationRepository extends JpaRepository<AppInstallation, String> {
+  List<AppInstallation> findAllByUserId(String userId);
+}
